Added bookmark functionality to the extension

--- a/options.html
+++ b/options.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+	<head>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<label for="dev-url">Current dev URL</label>
+		<input id="dev-url" type="text" name="dev-url">
+		<label for="xd-url">Adobe XD URL</label>
+		<input id="xd-url" type="text" name="xd-url">
+		<input id="save-urls" type="submit" name="save-urls" value="Save URLs">
 
-  </body>
-  <script src="options.js"></script>
+		<script src="jquery.min.js"></script>
+		<script src="options.js"></script>
+	</body>
 </html>
