--- a/popup.html
+++ b/popup.html
@@ -2,12 +2,17 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="popup.css">
 	</head>
 	<body>
-		<a id="dev-admin" href="#" target="_blank">Dashboard</a>
-		<a id="dev-home" href="#" target="_blank">Frontend</a>
-		<a id="dev-xd" href="#" target="_blank">Adobe XD</a>
-
+		<div class="link-wrapper">
+			<a id="dev-admin" class="btn" href="#" target="_blank">Dashboard</a>
+			<a id="dev-home" class="btn" href="#" target="_blank">Frontend</a>
+			<a id="dev-xd" class="btn" href="#" target="_blank">Adobe XD</a>
+		</div>
 		<script src="jquery.min.js"></script>
 		<script type="text/javascript" src="popup.js"></script>
 	</body>
