Added temporary icons, Trello pages and extra WordPress bookmarks

--- a/options.html
+++ b/options.html
@@ -8,12 +8,17 @@
 		<link rel="stylesheet" href="options.css">
 	</head>
 	<body>
+		<h1>STRL Extension Settings</h1>
 
 		<p>Enter URL's starting with <span class="bold">https://</span> and ending with a <span class="bold">/</span>.</p>
 		<label for="dev-url">Current dev URL</label>
 		<input id="dev-url" type="url" name="dev-url">
 		<label for="xd-url">Adobe XD URL</label>
 		<input id="xd-url" type="url" name="xd-url">
+		<label for="trello-i-url">Trello Intern URL</label>
+		<input id="trello-i-url" type="url" name="trello-i-url">
+		<label for="trello-e-url">Trello Extern URL</label>
+		<input id="trello-e-url" type="url" name="trello-e-url">
 		<input id="save-urls" type="submit" name="save-urls" value="Save URLs">
 
 		<script src="jquery.min.js"></script>
