--- a/popup.html
+++ b/popup.html
@@ -9,9 +9,17 @@
 	</head>
 	<body>
 		<div class="link-wrapper">
-			<a id="dev-admin" class="btn" href="#" target="_blank">Dashboard</a>
-			<a id="dev-home" class="btn" href="#" target="_blank">Frontend</a>
+			<p>General</p>
 			<a id="dev-xd" class="btn" href="#" target="_blank">Adobe XD</a>
+			<a id="dev-trello-i" class="btn" href="#" target="_blank">Trello Intern</a>
+			<a id="dev-trello-e" class="btn" href="#" target="_blank">Trello Extern</a>
+
+			<p>WordPress</p>
+			<a id="dev-home" class="btn" href="#" target="_blank">Home</a>
+			<a id="dev-admin" class="btn" href="#" target="_blank">Admin</a>
+			<a id="dev-global" class="btn" href="#" target="_blank">STRL Global</a>
+			<a id="dev-pages" class="btn" href="#" target="_blank">Pages</a>
+			<a id="dev-facet" class="btn" href="#" target="_blank">Facet</a>
 		</div>
 		<script src="jquery.min.js"></script>
 		<script type="text/javascript" src="popup.js"></script>
